# src/routes/EquipmentRoutes.js
@@ -3,9 +3,10 @@ Object.defineProperty(exports, "__esModule", { value: true });
 var express_1 = require("express");
 var EquipmentController_1 = require("../controllers/EquipmentController");
 var router = (0, express_1.Router)();
-router.get('/', EquipmentController_1.getEquipment);
-router.get('/:id', EquipmentController_1.getEquipmentById);
-router.post('/', EquipmentController_1.createEquipment);
-router.put('/:id', EquipmentController_1.updateEquipment);
-router.delete('/:id', EquipmentController_1.deleteEquipment);
+var equipmentController = new EquipmentController_1.EquipmentController();
+router.get('/', function (req, res) { return equipmentController.getAll(req, res); });
+router.get('/:id', function (req, res) { return equipmentController.getById(req, res); });
+router.post('/', function (req, res) { return equipmentController.create(req, res); });
+router.put('/:id', function (req, res) { return equipmentController.update(req, res); });
+router.delete('/:id', function (req, res) { return equipmentController.delete(req, res); });
 exports.default = router;
